@@ -23,6 +23,7 @@ NEW:
 		Order lines are now shown on unit selection.
 		Fixed chat synchronization in replays.
 		Fixed the game sometimes crashing when deploying and activating the guard cursor at the same time.
+		Build time is now set when an item reaches the front of a queue, instead of immediately when queued.
 	Dune 2000:
 		Added the Atreides grenadier from the 1.06 patch.
 		Added randomized tiles for Sand and Rock terrain.
